--- a/src/test/resources/config/configs.properties
+++ b/src/test/resources/config/configs.properties
@@ -1,7 +1,7 @@
 #Wed Jan 10 00:21:02 ICT 2024
 PASSWORD=Demo@123
 author=Anh Tester
-USERNAME=anhtester
+USERNAME=UserName
 URI=https\://api.anhtester.com/api
 HEADERACCEPT=application/json
 CONTENTTYPE=application/json
