Update generate Json schema file

--- a/src/test/resources/config/configs.properties
+++ b/src/test/resources/config/configs.properties
@@ -1,7 +1,8 @@
-#Wed Jan 10 00:21:02 ICT 2024
+#Sun Mar 10 01:27:34 ICT 2024
+BASE_URI=https://api.anhtester.com/api
 PASSWORD=Demo@123
 author=Anh Tester
-USERNAME=UserName
-URI=https\://api.anhtester.com/api
+BASE_PATH=/
+USERNAME=anhtester
 HEADERACCEPT=application/json
 CONTENTTYPE=application/json
